<resources>
    <string name="app_name">CharRecognition</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recognize">Recognize</string>
    <string name="start_train">Start train</string>
    <string name="stop_train">Stop train</string>
    <string name="clear">Clear</string>
    <string name="train">Train</string>
    <string name="reset_training_set">Reset training set</string>
    <string name="result_placeholder">--</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
</resources>
